# GibGUI

./: .gitignore  README.md  gibmacos_gui.py  pyproject.toml  run_gui.py  setup.py
Scripts/: downloader.py
docs/: index.md
src/gibgui/: __init__.py  gibmacos_gui.py
src/gibgui/patches/: __init__.py  downloader.py
tests/: test_basic.py
