            [build-system]
            requires = ["setuptools>=42", "wheel"]
            build-backend = "setuptools.build_meta"

            [project]
            name = "GibGUI"
            version = "0.1.0"
            authors = [
                {"name" = "Anoop Kumar", "email" = "helllguest@pm.me"},
                {"name" = "CorpNewt", "email" = ""},
            ]
            description = "GUI wrapper for gibMacOS"
            readme = "README.md"
            requires-python = ">=3.8"
            classifiers = [
                "Programming Language :: Python :: 3",
                "License :: OSI Approved :: MIT License",
                "Operating System :: OS Independent",
            ]

            dependencies = [
                "requests>=2.25.1",
            ]

            [project.urls]
            Homepage = "https://github.com/HelllGuest/GibGUI"
            Documentation = "https://github.com/HelllGuest/GibGUI#readme"
            Repository = "https://github.com/HelllGuest/GibGUI"
            Issues = "https://github.com/HelllGuest/GibGUI/issues"

            [project.scripts]
            gibgui = "gibgui:launch"
